# nvim-claude

./: .gitignore  .gitmodules  .luarc.json  .nvim-server  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALLATION.md  LICENSE  QUICK_FIX.md  README.md  bash-hook-wrapper.sh  cleanup-tasks.md  commands.lua  debug-test-file2.lua  deletion-tracking-tasks.md  developer-file.lua  diff-review.lua  doctest.config.toml  error-diagnostics.md  hooks.lua  init.lua  inline-diff-debug.lua  inline-diff-persistence.lua  inline-diff.lua  mappings.lua  mcp-bridge.lua  nvr-proxy.sh  post-hook-wrapper.sh  pre-hook-wrapper.sh  registry.lua  settings-updater.lua  stop-hook-validator.sh  tasks.md  test-file-1.md  test-file-2.md  test-install.vim  test-new-file.txt  test-stop-hook.lua  test-write-tool.md  (+2 more)
claude-hooks/: bash-hook-wrapper.sh  bash-post-hook-wrapper.sh  hook-common.sh  post-hook-wrapper.sh  pre-hook-wrapper.sh  stop-hook-validator.sh  user-prompt-hook-wrapper.sh
dev-docs/: acp-integration.md  architecture.md  coding-guidelines.md  debugging.md  fs-shim.md  tasks.md  testing.md
doc/: nvim-claude.txt
docs/: README.mdx  architecture.mdx  coding-guidelines.mdx  debugging.mdx  diagnostics.mdx  tasks.mdx  testing.mdx
git-hooks/: pre-commit
mcp-server/: debug-mcp.sh  install.sh  nvim-lsp-server.py  nvim-lsp-wrapper.sh  requirements.txt  test-mcp-tools.py
plugin/: nvim-claude.lua
rpc/: check-diagnostics.py  get-session-diagnostics.py  install.sh  nvim-rpc.sh  nvim_rpc.py
shim/: Cargo.toml  README.md  README.mdx  build.sh  fs_shim_sidecar.py
shim/src/: lib.rs
tests/: README.md  (+8 more)
(+144 files in other folders)
