[package]
name = "nvim-claude-shim"
version = "0.1.0"
edition = "2021"
description = "Filesystem interception shim for nvim-claude"
license = "MIT"

[lib]
name = "nvimclaude_shim"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.177"
once_cell = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
